--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch",
+    "deploy": "next build && next export",
     "test:coverage": "jest --coverage"
   },
   "repository": {
